Finisched header and introduction

--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Web-design business</title>
 </head>
 <body>
+<header class="header-section outer-content-container">
+    <div class="header-content inner-content-container">
+        <nav class="header-content__navigation">
+            <ul>
+                <li><a href="#projects">Case Studies</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
 
+        <div class="header-content__hero">
+            <h1>Your website is an investment in the success of your business.</h1>
+            <p>We are here to help you succeed.</p>
+            <button type="button">Let's work together</button>
+        </div>
+    </div>
+    <div class="header-content__squiggle"></div>
+</header>
+<main>
+    <section class="introduction-section outer-content-container">
+        <div class="introduction-content inner-content-container">
+            <h3>Rekupe is a digital agency in Los Angeles.</h3>
+            <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
+            <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
+            <p>Have a question? <a href="#contact">Click here</a> to contact us!</p>
+        </div>
+    </section>
+
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
