Finished projects section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,45 @@
             <p>Have a question? <a href="#contact">Click here</a> to contact us!</p>
         </div>
     </section>
+    <section class="projects-section outer-content-container">
+        <div class="projects-content inner-content-container">
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Rolling Stone</h4>
+                    <div class="project-article__squiggle"></div>
+                    <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                        icon.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-01.jpeg" alt="Webdesign project Rolling Stone">
+                </span>
+            </article>
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Variety</h4>
+                    <div class="project-article__squiggle"></div>
+                    <p>Variety is an industry leader for breaking entertainment news, reviews and box office results
+                        with archive of content dating back to 1905.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-02.jpeg" alt="Webdesign project Variety">
+                </span>
+            </article>
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Worth</h4>
+                    <div class="project-article__squiggle"></div>
+                    <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-03.jpeg" alt="Webdesign project Worth">
+                </span>
+            </article>
+        </div>
+    </section>
 
 </main>
 <footer>
