--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="project-article__project-link">View project</a>
                 </div>
                 <span class="project-article__image-wrapper">
-                    <img src="assets/work-image-01.jpeg" alt="Webdesign project Rolling Stone">
+                    <img src="assets/work-image-01.jpeg" alt="Webdesign project Rolling Stone"/>
                 </span>
             </article>
             <article class="project-article">
@@ -57,7 +57,7 @@
                     <a class="project-article__project-link">View project</a>
                 </div>
                 <span class="project-article__image-wrapper">
-                    <img src="assets/work-image-02.jpeg" alt="Webdesign project Variety">
+                    <img src="assets/work-image-02.jpeg" alt="Webdesign project Variety"/>
                 </span>
             </article>
             <article class="project-article">
@@ -68,12 +68,58 @@
                     <a class="project-article__project-link">View project</a>
                 </div>
                 <span class="project-article__image-wrapper">
-                    <img src="assets/work-image-03.jpeg" alt="Webdesign project Worth">
+                    <img src="assets/work-image-03.jpeg" alt="Webdesign project Worth"/>
                 </span>
             </article>
         </div>
     </section>
-
+    <section class="services-section outer-content-container">
+        <div class="service-content__tiles inner-content-container">
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_web-design.svg" alt="icon web design"/>
+                <h5>Web Design</h5>
+                <p>Good web design is how companies stand out from their competitors. High quality web design leads to
+                    increased user conversion and engagement. Through a proven web design process, we help clients
+                    launch websites and products that improve on their bottom line.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_web-development.svg" alt="icon web development"/>
+                <h5>Web Development</h5>
+                <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites
+                    with a mobile first approach and ensure that our code quality is clean, organized and performant.
+                    Already have a design but need it developed? We’re here to help!</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_ux.svg" alt="icon user experience"/>
+                <h5>User Experience</h5>
+                <p>In order to build successful products you have to understand the user. We create user personas,
+                wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape
+                the product and can quickly eliminate potential risks – saving you time and money.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_graphic-design.svg" alt="icon graphic design"/>
+                <h5>Logo Design + Branding</h5>
+                <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable
+                    logos and brand identity. The best brands stand out from the crowd by having a clear and unique
+                    point of view. We will work with you to understand your vision and help create a unique brand
+                    identity and style guide for your company.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_seo.svg" alt="icon seo"/>
+                <h5>SEO</h5>
+                <p>Do you want your site to rank higher in search results? Google is constantly changing their
+                    algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make
+                    sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_copywriting.svg" alt="icon copywriting"/>
+                <h5>Copy Writing</h5>
+                <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of
+                    voice will help you stand out from the crowd and build brand loyalty. We work with you to establish
+                    your brand bible and ensure your messaging is focused and targeted.</p>
+            </article>
+        </div>
+    </section>
 </main>
 <footer>
 
