Finished contactsection and footer

--- a/index.html
+++ b/index.html
@@ -120,9 +120,32 @@
             </article>
         </div>
     </section>
+    <section class="contact-section outer-content-container">
+        <div class="contact-content inner-content-container">
+            <h2>Let's work together</h2>
+            <p>Have a question? Need a quote? Let us know!</p>
+            <form class="contact-content__form">
+                <label for="name-field">
+                    Name
+                    <input type="text" id="name-field" name="name" placeholder="Name"/>
+                </label>
+                <label for="email-field">
+                    Email
+                    <input type="email" id="email-field" name="email" placeholder="Email"/>
+                </label>
+                <label for="message-field">
+                    Message
+                    <textarea rows="10" cols="40" id="message-field" name="message" placeholder="Message"></textarea>
+                </label>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </section>
 </main>
-<footer>
-
+<footer class="footer-section outer-content-container">
+    <div class="inner-content-container">
+        <p>Business website opdracht &copy; NOVI Hogeschool 2022</p>
+    </div>
 </footer>
 </body>
 </html>
