Added mediaqueries for  smaller screens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Have a question? <a href="#contact">Click here</a> to contact us!</p>
         </div>
     </section>
-    <section class="projects-section outer-content-container">
+    <section id="projects" class="projects-section outer-content-container">
         <div class="projects-content inner-content-container">
             <article class="project-article">
                 <div class="project-article__container">
@@ -73,7 +73,7 @@
             </article>
         </div>
     </section>
-    <section class="services-section outer-content-container">
+    <section id="services" class="services-section outer-content-container">
         <div class="service-content__tiles inner-content-container">
             <article class="service-tile">
                 <img class="service-tile__icon" src="assets/icon_web-design.svg" alt="icon web design"/>
@@ -120,11 +120,11 @@
             </article>
         </div>
     </section>
-    <section class="contact-section outer-content-container">
+    <section id="contact" class="contact-section outer-content-container">
         <div class="contact-content inner-content-container">
             <h2>Let's work together</h2>
             <p>Have a question? Need a quote? Let us know!</p>
-            <form class="contact-content__form">
+            <form class="contact-content__form" onsubmit="hier-hebben-we-js-voor-nodig">
                 <label for="name-field">
                     Name
                     <input type="text" id="name-field" name="name" placeholder="Name"/>
