Added bonus assignments 1, 2, 3 and 4

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </div>
     <div class="header-content__squiggle"></div>
+    <div class="triangle__bottom"> </div>
 </header>
 <main>
     <section class="introduction-section outer-content-container">
@@ -35,6 +36,7 @@
         </div>
     </section>
     <section id="projects" class="projects-section outer-content-container">
+        <div class="triangle__top"> </div>
         <div class="projects-content inner-content-container">
             <article class="project-article">
                 <div class="project-article__container">
@@ -72,6 +74,7 @@
                 </span>
             </article>
         </div>
+        <div class="triangle__bottom"> </div>
     </section>
     <section id="services" class="services-section outer-content-container">
         <div class="service-content__tiles inner-content-container">
@@ -121,6 +124,7 @@
         </div>
     </section>
     <section id="contact" class="contact-section outer-content-container">
+        <div class="triangle__top"> </div>
         <div class="contact-content inner-content-container">
             <h2>Let's work together</h2>
             <p>Have a question? Need a quote? Let us know!</p>
