--- a/index.html
+++ b/index.html
@@ -2,9 +2,150 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Web-design business</title>
 </head>
 <body>
+<header class="header-section outer-content-container">
+    <div class="header-content inner-content-container">
+        <nav class="header-content__navigation">
+            <ul>
+                <li><a href="#projects">Case Studies</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
 
+        <div class="header-content__hero">
+            <h1>Your website is an investment in the success of your business.</h1>
+            <p>We are here to help you succeed.</p>
+            <button type="button">Let's work together</button>
+        </div>
+    </div>
+    <div class="triangle__bottom"> </div>
+</header>
+<main>
+    <section class="introduction-section outer-content-container">
+        <div class="introduction-content inner-content-container">
+            <h3>Rekupe is a digital agency in Los Angeles.</h3>
+            <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
+            <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
+            <p>Have a question? <a href="#contact">Click here</a> to contact us!</p>
+        </div>
+    </section>
+    <section id="projects" class="projects-section outer-content-container">
+        <div class="triangle__top"> </div>
+        <div class="projects-content inner-content-container">
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Rolling Stone</h4>
+                    <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                        icon.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-01.jpeg" alt="Webdesign project Rolling Stone"/>
+                </span>
+            </article>
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Variety</h4>
+                    <p>Variety is an industry leader for breaking entertainment news, reviews and box office results
+                        with archive of content dating back to 1905.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-02.jpeg" alt="Webdesign project Variety"/>
+                </span>
+            </article>
+            <article class="project-article">
+                <div class="project-article__container">
+                    <h4>Worth</h4>
+                    <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                    <a class="project-article__project-link">View project</a>
+                </div>
+                <span class="project-article__image-wrapper">
+                    <img src="assets/work-image-03.jpeg" alt="Webdesign project Worth"/>
+                </span>
+            </article>
+        </div>
+        <div class="triangle__bottom"> </div>
+    </section>
+    <section id="services" class="services-section outer-content-container">
+        <div class="service-content__tiles inner-content-container">
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_web-design.svg" alt="icon web design"/>
+                <h5>Web Design</h5>
+                <p>Good web design is how companies stand out from their competitors. High quality web design leads to
+                    increased user conversion and engagement. Through a proven web design process, we help clients
+                    launch websites and products that improve on their bottom line.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_web-development.svg" alt="icon web development"/>
+                <h5>Web Development</h5>
+                <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites
+                    with a mobile first approach and ensure that our code quality is clean, organized and performant.
+                    Already have a design but need it developed? We’re here to help!</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_ux.svg" alt="icon user experience"/>
+                <h5>User Experience</h5>
+                <p>In order to build successful products you have to understand the user. We create user personas,
+                    wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape
+                    the product and can quickly eliminate potential risks – saving you time and money.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_graphic-design.svg" alt="icon graphic design"/>
+                <h5>Logo Design + Branding</h5>
+                <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable
+                    logos and brand identity. The best brands stand out from the crowd by having a clear and unique
+                    point of view. We will work with you to understand your vision and help create a unique brand
+                    identity and style guide for your company.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_seo.svg" alt="icon seo"/>
+                <h5>SEO</h5>
+                <p>Do you want your site to rank higher in search results? Google is constantly changing their
+                    algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make
+                    sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
+            </article>
+            <article class="service-tile">
+                <img class="service-tile__icon" src="assets/icon_copywriting.svg" alt="icon copywriting"/>
+                <h5>Copy Writing</h5>
+                <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of
+                    voice will help you stand out from the crowd and build brand loyalty. We work with you to establish
+                    your brand bible and ensure your messaging is focused and targeted.</p>
+            </article>
+        </div>
+    </section>
+    <section id="contact" class="contact-section outer-content-container">
+        <div class="triangle__top"> </div>
+        <div class="contact-content inner-content-container">
+            <h2>Let's work together</h2>
+            <p>Have a question? Need a quote? Let us know!</p>
+            <form class="contact-content__form" onsubmit="hier-hebben-we-js-voor-nodig">
+                <label for="name-field">
+                    Name
+                    <input type="text" id="name-field" name="name" placeholder="Name"/>
+                </label>
+                <label for="email-field">
+                    Email
+                    <input type="email" id="email-field" name="email" placeholder="Email"/>
+                </label>
+                <label for="message-field">
+                    Message
+                    <textarea rows="10" cols="40" id="message-field" name="message" placeholder="Message"></textarea>
+                </label>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </section>
+</main>
+<footer class="footer-section outer-content-container">
+    <div class="inner-content-container">
+        <p>Business website opdracht &copy; NOVI Hogeschool 2022</p>
+    </div>
+</footer>
 </body>
 </html>
